<resources>
    <string name="app_name">PracticalTest01Var05</string>
    <string name="secondary">NAVIGATE TO SECONDARY</string>
    <string name="top_left">TOP LEFT</string>
    <string name="top_right">TOP RIGHT</string>
    <string name="center">CENTER</string>
    <string name="bottom_left">BOTTOM LEFT</string>
    <string name="bottom_right">BOTTOM RIGHT</string>
    <string name="none">None was yet pressed</string>
    <string name="here" />
    <string name="nothing">"  "</string>
</resources>