<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context="ro.pub.cs.systems.eim.practicaltest01var05.PracticalTest01Var05MainActivity">

    <Button
        android:id="@+id/navigate_to_secondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/secondary" />
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:rowCount="3"
        android:columnCount="3"
        android:layout_gravity="fill_horizontal">

        <Button
            android:id="@+id/top_left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="start"
            android:text="@string/top_left"/>

        <Button
            android:id="@+id/top_right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_gravity="end"
            android:text="@string/top_right"/>

        <Button
            android:id="@+id/center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="center"
            android:text="@string/center"/>

        <Button
            android:id="@+id/bottom_left"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_gravity="start"
            android:text="@string/bottom_left"/>

        <Button
            android:id="@+id/bottom_right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_gravity="end"
            android:text="@string/bottom_right"/>

    </GridLayout>
    <EditText
        android:id="@+id/text_concat"
        android:layout_gravity="start"
        android:enabled="false"
        android:inputType="text"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>

</LinearLayout>